crates/templates/tests/snapshots/usage_test__impl-24.snap
---
source: crates/templates/tests/usage_test.rs
description: Usage with a global option that uses -v as short
expression: output
---
usage() {
  printf "Test usage with a global option that uses -v as short\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS]\n"
  printf "  usage -h|--help\n"
  printf "  usage --version\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -v --verbose [<VERBOSE>]\n"
  printf "    Test verbose option\n"
  printf "  -h --help\n"
  printf "    Print help\n"
  printf "  --version\n"
  printf "    Print version\n"
}

