crates/templates/tests/snapshots/usage_test__impl-27.snap
---
source: crates/templates/tests/usage_test.rs
description: Usage with option with all flags and value notations
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS] [COMMAND] [COMMAND_OPTIONS]\n"
  printf "  usage -h|--help\n"
  printf "\n\033[4m%s\033[0m\n" "Commands:"
  cat <<EOF
  foo .... Test foo command
EOF
  printf "  [@default foo]\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  --verbose\n"
  printf "    Test verbose flag\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}

