crates/templates/tests/snapshots/usage_test__impl-3.snap
---
source: crates/templates/tests/usage_test.rs
description: Usage with single option
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS]\n"
  printf "  usage -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -f --foo [<FOO>]\n"
  printf "    Test foo option\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}

