crates/templates/tests/snapshots/usage_test__impl-6.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS]\n"
  printf "  usage -h|--help\n"
  printf "  usage --version\n"
  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -d --default [<DEFAULT>]\n"
  printf "    Test default option\n"
  printf "    [@default foo]\n"
  printf "\n\033[4m%s\033[0m\n" "Flags:"
  printf "  -h --help\n"
  printf "    Print help\n"
  printf "  --version\n"
  printf "    Pring version\n"
}

