crates/templates/tests/snapshots/usage_test__impl-7.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS]\n"
  printf "  usage -h|--help\n"
  printf "  usage -v|--version\n"
  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -c --choices [<CHOICES>]\n"
  printf "    Test option with choices\n"
  printf "    [@choices foo, bar, baz]\n"
  printf "\n\033[4m%s\033[0m\n" "Flags:"
  printf "  -h --help\n"
  printf "    Print help\n"
  printf "  -v --version\n"
  printf "    Pring version\n"
}

